--- a/app/src/main/res/layout/curry_main.xml
+++ b/app/src/main/res/layout/curry_main.xml
@@ -7,7 +7,7 @@
     tools:context=".CurryMainActivity">
 
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/card"
+        android:id="@+id/curry_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp">
@@ -21,9 +21,9 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="194dp"
-                android:contentDescription="@string/content_description_media"
+                android:contentDescription="@string/curry_card_two_description"
                 android:scaleType="centerCrop"
-                app:srcCompat="@drawable/_054348" />
+                app:srcCompat="@drawable/curry_two" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -36,7 +36,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/title"
+                    android:text="@string/curry_two_name"
                     android:textAppearance="?attr/textAppearanceHeadline6"
                     android:textColor="@color/white" />
 
