--- a/app/src/main/res/layout/curry_main.xml
+++ b/app/src/main/res/layout/curry_main.xml
@@ -52,7 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
         android:layout_margin="16dp"
-        android:contentDescription="@string/fab_content_desc"
+        android:contentDescription="@string/action_button_desc"
         app:srcCompat="@drawable/ic_add" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
