--- a/app/src/main/res/layout/nexter_form.xml
+++ b/app/src/main/res/layout/nexter_form.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -25,17 +24,6 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <!-- Note: A RecyclerView can also be used -->
-    <!--    <androidx.core.widget.NestedScrollView-->
-    <!--        android:id="@+id/nestedScrollView"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="match_parent">-->
-
-    <!--        <com.google.android.material.textfield.TextInputLayout-->
-    <!--            android:id="@+id/textField"-->
-    <!--            android:layout_width="match_parent"-->
-    <!--            android:layout_height="match_parent">-->
-
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/curry_form_name"
         android:layout_width="match_parent"
@@ -50,6 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
+        android:height="@string/form_steps_ingredients_text_input_height"
         android:hint="@string/form_steps"
         app:layout_constraintBottom_toTopOf="@+id/curry_form_ingredients"
         app:layout_constraintTop_toBottomOf="@+id/curry_form_name" />
@@ -59,12 +48,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
+        android:height="@string/form_steps_ingredients_text_input_height"
         android:hint="@string/form_ingredients"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/curry_form_steps" />
-
-    <!--        </com.google.android.material.textfield.TextInputLayout>-->
-
-    <!--    </androidx.core.widget.NestedScrollView>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
