--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -21,6 +21,8 @@
 
             <include layout="@layout/content_gallery_only" />
 
+            <include layout="@layout/curry_form_two" />
+
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
