--- a/app/src/main/res/layout/activity_main_two.xml
+++ b/app/src/main/res/layout/activity_main_two.xml
@@ -12,12 +12,15 @@
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/topAppBar"
+            style="@style/Widget.MaterialComponents.Toolbar.Primary"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:background="@color/nexter"
+            app:menu="@menu/nexter_menu_items"
+            app:navigationIcon="@drawable/ic_close"
+            app:title="@string/curry_name" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
