--- a/app/src/main/res/layout/main_form.xml
+++ b/app/src/main/res/layout/main_form.xml
@@ -21,7 +21,7 @@
 
             <include layout="@layout/content_gallery_only" />
 
-            <include layout="@layout/curry_form_two" />
+            <include layout="@layout/main_text_input" />
 
         </LinearLayout>
 
