--- a/app/src/main/res/layout/nexter_main.xml
+++ b/app/src/main/res/layout/nexter_main.xml
@@ -24,7 +24,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="60dp">
 
         <include layout="@layout/nexter_card" />
 
