--- a/app/src/main/res/layout/delivery_new_note.xml
+++ b/app/src/main/res/layout/delivery_new_note.xml
@@ -11,9 +11,9 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="194dp"
-        android:contentDescription="@string/main_curry_card_description"
+        android:contentDescription="@string/snack_card_two_description"
         android:scaleType="centerCrop"
-        app:srcCompat="@drawable/curry_main" />
+        app:srcCompat="@drawable/snack_two" />
 
     <TextView
         android:layout_width="wrap_content"
