Update main imgs two

--- a/app/src/main/res/layout/rent_buy.xml
+++ b/app/src/main/res/layout/rent_buy.xml
@@ -13,7 +13,7 @@
         android:layout_height="194dp"
         android:contentDescription="@string/snack_card_two_description"
         android:scaleType="centerCrop"
-        app:srcCompat="@drawable/snack_two" />
+        app:srcCompat="@drawable/buffet_set" />
 
     <TextView
         android:layout_width="wrap_content"
