--- a/app/src/main/res/layout/delivery_buy.xml
+++ b/app/src/main/res/layout/delivery_buy.xml
@@ -1,74 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".NewNoteActivity"
-    android:orientation="vertical">
+    tools:context=".NewNoteActivity">
 
-    <ImageView
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/curry_card"
         android:layout_width="match_parent"
-        android:layout_height="194dp"
-        android:contentDescription="@string/snack_card_two_description"
-        android:scaleType="centerCrop"
-        app:srcCompat="@drawable/snack_two" />
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <!-- Media -->
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="194dp"
+                android:contentDescription="@string/snack_card_two_description"
+                android:scaleType="centerCrop"
+                app:srcCompat="@drawable/snack_two" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/curry"
+                android:orientation="vertical"
+                android:padding="16dp">
+
+                <!-- Title, secondary and supporting text -->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/delivery_example_name"
+                    android:textAppearance="?attr/textAppearanceHeadline6"
+                    android:textColor="@color/white" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/delivery_example_address"
+                    android:textAppearance="?attr/textAppearanceHeadline6"
+                    android:textColor="@color/yellow_600"
+                    android:textSize="17sp" />
+
+                <RatingBar
+                    android:id="@+id/ratingBar1"
+                    android:layout_width="240dp"
+                    android:layout_height="42dp"
+                    android:layout_marginTop="8dp"
+                    android:numStars="5"
+                    android:rating="3.5" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </com.google.android.material.card.MaterialCardView>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/delivery_example_name"
-        android:textAppearance="?attr/textAppearanceHeadline6"
-        android:textColor="@color/nexter"
-        android:layout_margin="10dp"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/delivery_example_address"
-        android:textAppearance="?attr/textAppearanceHeadline6"
-        android:textColor="@color/nexter"
-        android:textSize="18sp"
-        android:layout_margin="8dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
         android:layout_marginTop="16dp"
         android:text="@string/count"
         android:textAppearance="@android:style/TextAppearance.Medium"
-        android:textColor="@color/nexter"
-        android:layout_margin="8dp" />
+        android:textColor="@color/nexter" />
 
     <NumberPicker
         android:id="@+id/number_picker_priority"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp" />
+        android:layout_margin="8dp"
+        android:orientation="horizontal" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="8dp"
         android:text="@string/rs_1080"
         android:textAppearance="?attr/textAppearanceHeadline6"
-        android:textColor="@color/nexter"
-        android:layout_margin="8dp" />
-
-    <RatingBar
-        android:id="@+id/ratingBar1"
-        android:layout_width="240dp"
-        android:layout_height="42dp"
-        android:numStars="5"
-        android:rating="3.5"
-        android:layout_marginTop="8dp"
-        android:layout_margin="8dp" />
+        android:textColor="@color/nexter" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/buy"
-        android:layout_margin="8dp" />
+        android:layout_margin="8dp"
+        android:text="@string/buy" />
 
 </LinearLayout>
