--- a/app/src/main/res/layout/delivery_buy.xml
+++ b/app/src/main/res/layout/delivery_buy.xml
@@ -64,35 +64,80 @@
 
     </com.google.android.material.card.MaterialCardView>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/count"
-        android:textAppearance="@android:style/TextAppearance.Medium"
-        android:textColor="@color/nexter" />
-
-    <NumberPicker
-        android:id="@+id/number_picker_priority"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:orientation="horizontal" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:text="@string/rs_1080"
-        android:textAppearance="?attr/textAppearanceHeadline6"
-        android:textColor="@color/nexter" />
-
-    <Button
-        android:id="@+id/button"
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/name_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:text="@string/buy" />
+        android:layout_margin="8dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="8dp"
+                    android:layout_marginTop="16dp"
+                    android:text="@string/count"
+                    android:textAppearance="@android:style/TextAppearance.Medium"
+                    android:textColor="@color/nexter" />
+
+                <com.shawnlin.numberpicker.NumberPicker
+                    android:id="@+id/number_picker_n"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="8dp"
+                    app:np_dividerColor="@color/nexter"
+                    app:np_formatter="@string/number_picker_formatter"
+                    app:np_max="59"
+                    app:np_min="0"
+                    app:np_orientation="horizontal"
+                    app:np_selectedTextColor="@color/nexter"
+                    app:np_selectedTextSize="@dimen/selected_text_size"
+                    app:np_textColor="@color/nexter"
+                    app:np_textSize="@dimen/text_size"
+                    app:np_typeface="@string/roboto_light"
+                    app:np_value="3" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/curry"
+                android:orientation="vertical"
+                android:padding="16dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="8dp"
+                    android:text="@string/rs_1080"
+                    android:textAppearance="?attr/textAppearanceHeadline6"
+                    android:textColor="@color/white" />
+
+                <Button
+                    android:id="@+id/button"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="8dp"
+                    android:text="@string/buy"
+                    app:backgroundTint="@color/nexter" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </com.google.android.material.card.MaterialCardView>
 
 </LinearLayout>
