--- a/app/src/main/res/layout/delivery_buy.xml
+++ b/app/src/main/res/layout/delivery_buy.xml
@@ -17,7 +17,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginTop="30dp">
 
             <!-- Media -->
             <ImageView
