--- a/app/src/main/res/layout/rent_buy.xml
+++ b/app/src/main/res/layout/rent_buy.xml
@@ -1,74 +1,144 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".NewNoteActivity"
-    android:orientation="vertical">
+    tools:context=".NewNoteActivity">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="194dp"
-        android:contentDescription="@string/snack_card_two_description"
-        android:scaleType="centerCrop"
-        app:srcCompat="@drawable/buffet_set" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/buffet_sets"
-        android:textAppearance="?attr/textAppearanceHeadline6"
-        android:textColor="@color/nexter"
-        android:layout_margin="10dp"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/delivery_example_address"
-        android:textAppearance="?attr/textAppearanceHeadline6"
-        android:textColor="@color/nexter"
-        android:textSize="18sp"
-        android:layout_margin="8dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/hours"
-        android:textAppearance="@android:style/TextAppearance.Medium"
-        android:textColor="@color/nexter"
-        android:layout_margin="8dp" />
-
-    <NumberPicker
-        android:id="@+id/number_picker_priority"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/rs_5160"
-        android:textAppearance="?attr/textAppearanceHeadline6"
-        android:textColor="@color/nexter"
-        android:layout_margin="8dp" />
-
-    <RatingBar
-        android:id="@+id/ratingBar1"
-        android:layout_width="240dp"
-        android:layout_height="42dp"
-        android:numStars="5"
-        android:rating="3.5"
-        android:layout_marginTop="8dp"
-        android:layout_margin="8dp" />
-
-    <Button
-        android:id="@+id/button"
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/curry_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/rent_name"
-        android:layout_margin="8dp" />
+        android:layout_margin="8dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="30dp">
+
+            <!-- Media -->
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="194dp"
+                android:contentDescription="@string/snack_card_two_description"
+                android:scaleType="centerCrop"
+                app:srcCompat="@drawable/buffet_set" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/curry"
+                android:orientation="vertical"
+                android:padding="16dp">
+
+                <!-- Title, secondary and supporting text -->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/buffet_sets"
+                    android:textAppearance="?attr/textAppearanceHeadline6"
+                    android:textColor="@color/white" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/delivery_example_address"
+                    android:textAppearance="?attr/textAppearanceHeadline6"
+                    android:textColor="@color/yellow_600"
+                    android:textSize="17sp" />
+
+                <RatingBar
+                    android:id="@+id/ratingBar1"
+                    android:layout_width="240dp"
+                    android:layout_height="42dp"
+                    android:layout_marginTop="8dp"
+                    android:numStars="5"
+                    android:rating="3.5" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </com.google.android.material.card.MaterialCardView>
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/name_card"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="8dp"
+                    android:layout_marginTop="16dp"
+                    android:text="@string/hours"
+                    android:textAppearance="@android:style/TextAppearance.Medium"
+                    android:textColor="@color/nexter" />
+
+                <com.shawnlin.numberpicker.NumberPicker
+                    android:id="@+id/number_picker_n"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="8dp"
+                    app:np_dividerColor="@color/nexter"
+                    app:np_formatter="@string/number_picker_formatter"
+                    app:np_max="59"
+                    app:np_min="0"
+                    app:np_orientation="horizontal"
+                    app:np_selectedTextColor="@color/nexter"
+                    app:np_selectedTextSize="@dimen/selected_text_size"
+                    app:np_textColor="@color/nexter"
+                    app:np_textSize="@dimen/text_size"
+                    app:np_typeface="@string/roboto_light"
+                    app:np_value="3" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/curry"
+                android:orientation="vertical"
+                android:padding="16dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="8dp"
+                    android:text="@string/rs_5160"
+                    android:textAppearance="?attr/textAppearanceHeadline6"
+                    android:textColor="@color/white" />
+
+                <Button
+                    android:id="@+id/button"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="8dp"
+                    android:text="@string/rent_name"
+                    app:backgroundTint="@color/nexter" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </com.google.android.material.card.MaterialCardView>
 
 </LinearLayout>
