Rent Delivery init with bunch of comments

--- a/app/src/main/res/layout/rent_form.xml
+++ b/app/src/main/res/layout/rent_form.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/grey_250"
-    tools:context=".MainActivity">
+    tools:context=".NewRentActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
