--- a/app/src/main/res/layout/rent_main.xml
+++ b/app/src/main/res/layout/rent_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".sweetMainActivity">
+    tools:context=".RentMainActivity">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/sweet_card"
@@ -55,7 +55,7 @@
     </com.google.android.material.card.MaterialCardView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floating_action_button"
+        android:id="@+id/button_add_rent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
