--- a/app/src/main/res/layout/nexter_card.xml
+++ b/app/src/main/res/layout/nexter_card.xml
@@ -86,7 +86,7 @@
     </com.google.android.material.card.MaterialCardView>
 
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/main_sweet_card"
+        android:id="@+id/main_delivery_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp">
@@ -126,7 +126,7 @@
     </com.google.android.material.card.MaterialCardView>
 
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/main_snack_card"
+        android:id="@+id/main_rent_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp">
