--- a/app/src/main/res/layout/rent_text_input.xml
+++ b/app/src/main/res/layout/rent_text_input.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="16dp"
+    tools:context=".NewRentActivity"
     android:orientation="vertical">
 
     <com.google.android.material.textfield.TextInputEditText
@@ -32,6 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:hint="@string/hourly_rental" />
+        android:hint="@string/hourly_rental"
+        android:inputType="numberDecimal"/>
 
 </LinearLayout>
