Feature/rent activity (#2)
* Rent Delivery init with bunch of comments

* Rent form init

* Rent create

* Rent view

* Fix colors

* Rent delete

* Rent number picker issue

* Rent buy init

* Fix rent back nav

* Fix scroll view of buy

* Rent change with picker

* Rent items set

* Image picker init

* Image upload init

* Image image download link

* Multiline items

* Glide image view

* Fix priority recyclerView crashed

* Rend buy image

--- a/app/src/main/res/layout/delivery_main.xml
+++ b/app/src/main/res/layout/delivery_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".snackMainActivity">
+    tools:context=".DeliveryMainActivity">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/snack_card"
@@ -28,7 +28,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/snack"
+                android:background="@color/sweet"
                 android:orientation="vertical"
                 android:padding="16dp">
 
@@ -54,7 +54,7 @@
     </com.google.android.material.card.MaterialCardView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floating_action_button"
+        android:id="@+id/button_add_delivery"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
