--- a/app/src/main/res/layout/rent_text_input.xml
+++ b/app/src/main/res/layout/rent_text_input.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="16dp"
+    tools:context=".NewRentActivity"
     android:orientation="vertical">
 
     <com.google.android.material.textfield.TextInputEditText
@@ -19,19 +22,25 @@
         android:height="70dp"
         android:hint="@string/delivery_address" />
 
-    <com.google.android.material.textfield.TextInputEditText
+    <EditText
         android:id="@+id/curry_form_items"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:height="120dp"
-        android:hint="@string/type_items" />
+        android:gravity="top|left"
+        android:hint="@string/delivery_address"
+        android:inputType="textMultiLine"
+        android:lines="6"
+        android:minLines="4"
+        android:scrollbars="vertical"
+        android:scrollHorizontally="false" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/curry_form_ingredients"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:hint="@string/hourly_rental" />
+        android:hint="@string/hourly_rental"
+        android:inputType="numberDecimal"/>
 
 </LinearLayout>
