--- a/app/src/main/res/layout/delivery_main.xml
+++ b/app/src/main/res/layout/delivery_main.xml
@@ -1,16 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/sweet_card"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".DeliveryMainActivity">
-
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/snack_card"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp">
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -19,6 +13,7 @@
 
             <!-- Media -->
             <ImageView
+                android:id="@+id/image_delivery"
                 android:layout_width="match_parent"
                 android:layout_height="194dp"
                 android:contentDescription="@string/snack_card_two_description"
@@ -34,6 +29,7 @@
 
                 <!-- Title, secondary and supporting text -->
                 <TextView
+                    android:id="@+id/text_view_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/delivery_example_name"
@@ -41,6 +37,7 @@
                     android:textColor="@color/white" />
 
                 <TextView
+                    android:id="@+id/text_view_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/delivery_example_price"
@@ -51,15 +48,4 @@
 
         </LinearLayout>
 
-    </com.google.android.material.card.MaterialCardView>
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/button_add_delivery"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
-        android:layout_margin="16dp"
-        android:contentDescription="@string/action_button_desc"
-        app:srcCompat="@drawable/ic_add" />
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.cardview.widget.CardView>
